# deltarune-cnpatcher

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  todo.md  vcpkg.json
android/: build.gradle.kts  log.txt  vcpkg_android_wrapper.cmake
android/app/: build.gradle
android/app/jni/: CMakeLists.txt  include  src
android/app/jni/src/engine/: Font.cpp
android/app/jni/src/scene/: SInit.cpp  Scene.h
android/app/src/main/: AndroidManifest.xml  assets
android/assets/: main.pak
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
app/: .clangd-linux  .clangd-windows  main.pak
assets/: assets.json  assets.toml  convert.ps1
ref/: loc.csv
src/: main.cpp  save.hpp  test.cpp  utils.cpp  utils.hpp  values.hpp
src/engine/: AssetMgr.cpp  AssetMgr.hpp  AudioMgr.cpp  AudioMgr.hpp  E_Font.cpp  Font.cpp  Font.h  FontMgr.cpp  FontMgr.hpp  Game.cpp  Game.hpp  GameMgr.cpp  GameMgr.hpp  GlobalVars.hpp  ImageMgr.cpp  ImageMgr.hpp  PhysFSSteam.hpp  PhysFSStream.cpp  Scene.hpp  SceneMgr.cpp  SceneMgr.hpp  Utils.hpp
src/scene/: SInit.cpp  SInit.h  S_Init.cpp  S_Init.hpp  Scene.cpp  Scene.h
src/type/: Animation.hpp  Image.hpp  Text.hpp  Timer.hpp
vcpkg/ports/: README
vcpkg/triplets/: custom-arm64-android.cmake  custom-x64-android.cmake  custom-x64-windows-dynamic-win7.cmake  custom-x64-windows-static-win7.cmake  custom-x64-windows-win7.cmake
